--- a/index.html
+++ b/index.html
@@ -3,17 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎁 ¡Feliz Cumple!</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <title>🎁 ¡Feliz Cumple Lu!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #fce4ec, #f8bbd0);
+      font-family: 'Bubblegum Sans', cursive;
+      background: linear-gradient(135deg,#b9f5d2, #8ab0fe);
       color: #4a4a4a;
       text-align: center;
       padding: 40px;
       min-height: 100vh;
       margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #welcome-page {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg,#b9f5d2, #8ab0fe);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    .welcome-text {
+      font-family: 'Bubblegum Sans', cursive;
+      font-size: 4.5em;
+      color: #429b50;
+      text-shadow: 3px 3px 0px rgba(0,0,0,0.1);
+      animation: fadeInUp 1.5s ease-out;
+      letter-spacing: 2px;
+    }
+
+    .welcome-emoji {
+      font-size: 5em;
+      margin: 20px;
+      animation: bounce 2s infinite;
+    }
+
+    .enter-btn {
+      background: linear-gradient(45deg,#429b50, #8ab0fe);
+      color: white;
+      text-decoration: none;
+      padding: 15px 30px;
+      border-radius: 25px;
+      font-size: 18px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      margin-top: 30px;
+      animation: fadeInUp 1.5s ease-out 0.5s backwards;
+      transition: all 0.3s ease;
+    }
+
+    .enter-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 7px 20px rgba(236, 64, 122, 0.6);
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+
+    #main-content {
+      display: none;
     }
 
     .card {
@@ -31,11 +103,10 @@
       position: absolute;
       top: -15px;
       left: -15px;
-      background: #f48fb1;
+      background: #429b50;
       color: white;
       padding: 8px 15px;
       font-size: 14px;
-      font-weight: bold;
       border-radius: 25px;
       transform: rotate(-10deg);
       box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
@@ -48,32 +119,34 @@
     }
 
     h1 {
-      font-family: 'Dancing Script', cursive;
-      font-size: 2.5em;
-      color: #e91e63;
+      font-family: 'Bubblegum Sans', cursive;
+      font-size: 2.8em;
+      color: #429b50;
       margin-bottom: 30px;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      text-shadow: 3px 3px 0px rgba(0,0,0,0.1);
+      letter-spacing: 1px;
     }
 
     p {
+      font-size: 1.2em;
       line-height: 1.6;
       margin: 15px 0;
+      letter-spacing: 0.5px;
     }
 
     strong {
-      color: #d81b60;
+      color: #429b50;
     }
 
     .btn {
       display: inline-block;
-      background: linear-gradient(45deg, #f48fb1, #ec407a);
+      background: linear-gradient(45deg,#429b50, #8ab0fe);
       color: white;
       text-decoration: none;
       padding: 12px 25px;
       border-radius: 25px;
       margin-top: 25px;
       font-size: 16px;
-      font-weight: bold;
       box-shadow: 0 5px 15px rgba(236, 64, 122, 0.4);
       transition: all 0.3s ease;
       border: none;
@@ -83,7 +156,7 @@
     .btn:hover {
       transform: translateY(-2px);
       box-shadow: 0 7px 20px rgba(236, 64, 122, 0.6);
-      background: linear-gradient(45deg, #ec407a, #e91e63);
+      background: linear-gradient(45deg, #8ab0fe, #a4d8e0);
     }
 
     .hidden {
@@ -107,16 +180,16 @@
 
     .date-card {
       display: block;
-      background: linear-gradient(45deg, #fce4ec, #f8bbd0);
-      border: 2px solid #f48fb1;
+      background: linear-gradient(45deg, #8ab0fe, #a4d8e0);
+      border: 2px solid #429b50;
       border-radius: 15px;
       padding: 15px;
       transition: all 0.3s ease;
     }
 
     .date-option input[type="radio"]:checked + .date-card {
-      background: linear-gradient(45deg, #f48fb1, #ec407a);
-      border-color: #ec407a;
+      background: linear-gradient(45deg,#429b50);
+      border-color: #a4d8e0;
       color: white;
       transform: scale(1.02);
       box-shadow: 0 5px 15px rgba(236, 64, 122, 0.4);
@@ -176,61 +249,136 @@
   </style>
 </head>
 <body>
-  <div class="floating-heart" style="top: 10%; left: 10%">💝</div>
-  <div class="floating-heart" style="top: 20%; right: 15%">💖</div>
-  <div class="floating-heart" style="bottom: 15%; left: 20%">💗</div>
-  <div class="floating-heart" style="bottom: 25%; right: 10%">💓</div>
+  <audio id="bgMusic" loop>
+    <source src="felizcumple.mp3" type="audio/mp3">
+  </audio>
 
-  <div class="card">
-    <div class="ribbon">Sorpresa</div>
-    <div class="emoji">🎀✨</div>
-    <h1>¡Cupón de Cumpleaños!</h1>
-    <p><strong>Intercambiable por:</strong></p>
-    <p>Una noche con mucha mística</p>
-    <p><strong>Válido desde:</strong></p>
-    <p>12 de Abril de 2025</p>
-    <p><strong>Ubicación:</strong></p>
-    <p>Secreta 🤫</p>
-    <p><strong>Instrucciones:</strong></p>
-    <p>1. Traer el cupón (y la presencia jeje).<br>
-       2. Estar list@ para divertirse.<br>
-       3. ¡Sacar muchas fotos!</p>
+  <div id="musicControl" style="position: fixed; top: 20px; right: 20px; z-index: 2000; cursor: pointer;">
+    <span id="musicIcon" style="font-size: 2em;">🔇</span>
+  </div>
+
+  <div id="welcome-page">
+    <div class="welcome-emoji">🎂</div>
+    <h1 class="welcome-text">¡Feliz Cumple Lu!</h1>
+    <button class="enter-btn" onclick="empezarMusica()">✨ Entrá para ver tu sorpresa ✨</button>
+  </div>
+
+  <div id="main-content">
+    <div class="floating-heart" style="top: 10%; left: 10%">💝</div>
+    <div class="floating-heart" style="top: 20%; right: 15%">💖</div>
+    <div class="floating-heart" style="bottom: 15%; left: 20%">💗</div>
+    <div class="floating-heart" style="bottom: 25%; right: 10%">💓</div>
+
+    <div class="card">
+      <div class="ribbon">Sorpresa</div>
+      <div class="emoji">🎀✨</div>
+      <h1>¡Cupón de Cumpleaños!</h1>
+      <p><strong>Intercambiable por:</strong></p>
+      <p>Una noche con mucha mística</p>
+      <p><strong>Válido desde:</strong></p>
+      <p>12 de Abril de 2025</p>
+      <p><strong>Ubicación:</strong></p>
+      <p>Secreta 🤫</p>
+      <p><strong>Instrucciones:</strong></p>
+      <p>1. Traer el cupón (y la presencia jeje).<br>
+         2. Estar list@ para divertirse.<br>
+         3. ¡Sacar muchas fotos!</p>
     
-    <div id="dateSelection" class="hidden">
-        <p><strong>Elegí una fecha para la cena:</strong></p>
-        <div class="date-options">
-            <label class="date-option">
-                <input type="radio" name="selectedDate" value="2025-04-13">
-                <span class="date-card">
-                    <span class="day">Domingo</span>
-                    <span class="date">13 de Abril</span>
-                    <span class="time">20:00 hs</span>
-                </span>
-            </label>
-            <label class="date-option">
-                <input type="radio" name="selectedDate" value="2025-04-19">
-                <span class="date-card">
-                    <span class="day">Sábado</span>
-                    <span class="date">19 de Abril</span>
-                    <span class="time">20:00 hs</span>
-                </span>
-            </label>
-            <label class="date-option">
-                <input type="radio" name="selectedDate" value="2025-04-20">
-                <span class="date-card">
-                    <span class="day">Domingo</span>
-                    <span class="date">20 de Abril</span>
-                    <span class="time">20:00 hs</span>
-                </span>
-            </label>
-        </div>
-        <button onclick="sendToWhatsApp()" class="btn">¡Confirmar Fecha! ✨</button>
-    </div>
+      <div id="dateSelection" class="hidden">
+          <p><strong>Elegí una fecha para la cena:</strong></p>
+          <div class="date-options">
+              <label class="date-option">
+                  <input type="radio" name="selectedDate" value="2025-04-13">
+                  <span class="date-card">
+                      <span class="day">Domingo</span>
+                      <span class="date">13 de Abril</span>
+                      <span class="time">20:00 hs</span>
+                  </span>
+              </label>
+              <label class="date-option">
+                  <input type="radio" name="selectedDate" value="2025-04-19">
+                  <span class="date-card">
+                      <span class="day">Sábado</span>
+                      <span class="date">19 de Abril</span>
+                      <span class="time">20:00 hs</span>
+                  </span>
+              </label>
+              <label class="date-option">
+                  <input type="radio" name="selectedDate" value="2025-04-20">
+                  <span class="date-card">
+                      <span class="day">Domingo</span>
+                      <span class="date">20 de Abril</span>
+                      <span class="time">20:00 hs</span>
+                  </span>
+              </label>
+          </div>
+          <button onclick="sendToWhatsApp()" class="btn">¡Confirmar Fecha! ✨</button>
+      </div>
 
-    <a href="#" class="btn" id="boton_fecha" onclick="showDatePicker()">✨ ¡Reclamá tu Sorpresa! ✨</a>
+      <a href="#" class="btn" id="boton_fecha" onclick="showDatePicker()">✨ ¡Reclamá tu Sorpresa! ✨</a>
+    </div>
   </div>
 
   <script>
+    const music = document.getElementById('bgMusic');
+    const musicIcon = document.getElementById('musicIcon');
+    let isMusicPlaying = false;
+
+    function empezarMusica() {
+        music.play()
+            .then(() => {
+                musicIcon.textContent = '🔊';
+                isMusicPlaying = true;
+                showMainContent();
+            })
+            .catch(error => {
+                console.log('Error reproduciendo música:', error);
+                showMainContent();
+            });
+    }
+
+    // Función para mostrar el contenido principal
+    function showMainContent() {
+        document.getElementById('welcome-page').style.display = 'none';
+        document.getElementById('main-content').style.display = 'block';
+    }
+
+    // Control de música
+    document.getElementById('musicControl').addEventListener('click', function() {
+        if (isMusicPlaying) {
+            music.pause();
+            musicIcon.textContent = '🔇';
+        } else {
+            music.play();
+            musicIcon.textContent = '🔊';
+        }
+        isMusicPlaying = !isMusicPlaying;
+    });
+
+    // Intento inicial de reproducción automática
+    window.addEventListener('DOMContentLoaded', function() {
+        // Intentar reproducir automáticamente
+        music.play()
+            .then(() => {
+                musicIcon.textContent = '🔊';
+                isMusicPlaying = true;
+            })
+            .catch(error => {
+                console.log('Reproducción automática bloqueada, esperando interacción del usuario');
+            });
+    });
+
+    // También intentar reproducir con cualquier interacción del usuario
+    document.addEventListener('click', function() {
+        if (!isMusicPlaying) {
+            music.play()
+                .then(() => {
+                    musicIcon.textContent = '🔊';
+                    isMusicPlaying = true;
+                });
+        }
+    }, { once: true });
+
     function showDatePicker() {
         document.getElementById('boton_fecha').style.display = 'none';
         document.getElementById('dateSelection').classList.remove('hidden');
