--- a/index.html
+++ b/index.html
@@ -397,8 +397,9 @@
         });
 
         const emails = [
-            'Carolinamunozmosquera@gmail.com',
-            'agustina.germinario@gmail.com'
+            'carolinamunozmosquera@gmail.com',
+            'agustina.germinario@gmail.com',
+            'camilamoperez@yahoo.com.ar'
         ].join(',');
 
         const subject = '¡Fecha confirmada para la cena sorpresa! 🎉';
